# Furfly-Code

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/rules/: spec-workflow.md
.furflycode/: config.yaml.example
docs/: openspec手册.md
docs/deep_search/: OpenSpec 与 Furfly-Spec 对比分析.md  prompt01.md  现代Agent提示词研究.md
docs/features/step1.多协议 LLM 终端对话客户端/: spec.md  tasks.md
docs/features/step2.工具系统/: checklist.md  plan.md  spec.md  tasks.md
docs/features/多协议 LLM 终端对话客户端/: checklist.md  plan.md
docs/knowledge/: anthropic的适配形式.md  openai的适配形式.md  实践出真知：为什么要采用openspec？.md  都准备给AgentLoop加权限系统了，CLAUDE.md里还写着「单轮上限」.md
docs/questions/: 2026-06-27-backend-tui-decoupling-points.md  2026-06-27-protocol-vs-abc-design-choice.md  2026-06-27-provider-protocol-and-runtime-checkable.md  2026-06-27-uv-run-furflycode-entry-point.md  INDEX.md
docs/superpowers/specs/: 2026-07-01-claude-md-sync-hooks-design.md
openspec/changes/add-agent-loop/: proposal.md  tasks.md
openspec/changes/improve-tool-descriptions/: proposal.md  tasks.md
openspec/changes/restructure-system-prompt/: evaluation-scenarios.md  proposal.md  user_prompt.md
openspec/specs/agent-loop/: spec.md
openspec/specs/chat-client/: spec.md
openspec/specs/context-injection/: spec.md
openspec/specs/system-prompt-architecture/: spec.md
src/furflycode/: __init__.py  __main__.py  cli.py  config.py  conversation.py  message.py  prompt.py
src/furflycode/llm/: __init__.py  (+2 more)
tests/: test_agent.py  test_config.py  test_context_injection.py  test_conversation.py  test_system_prompt.py  test_tool.py
(+43 files in other folders)
