[project]
name = "furflycode"
version = "0.1.0"
description = "A Claude Code-style terminal AI agent with multi-protocol LLM support"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.80",
    "rich>=13",
    "anthropic>=0.40",
    "openai>=1.50",
    "pyyaml>=6",
]

[project.scripts]
furflycode = "furflycode.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/furflycode"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.10"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
